// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scss > compileString 1`] = `
"::view-transition-old(root),
::view-transition-new(root) {
  mix-blend-mode: normal;
  animation: none;
}

::view-transition-old(root) {
  z-index: 1;
}

::view-transition-new(root) {
  z-index: 2147483646;
}

.dark::view-transition-old(root) {
  z-index: 2147483646;
}

.dark::view-transition-new(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-old(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-new(root) {
  clip-path: circle(0px at var(--theme-transition-x) var(--theme-transition-y));
  z-index: 2147483646;
}

[data-theme-transition=from-dark]::view-transition-old(root) {
  clip-path: circle(var(--theme-transition-radius) at var(--theme-transition-x) var(--theme-transition-y));
  z-index: 2147483646;
}

[data-theme-transition=from-dark]::view-transition-new(root) {
  z-index: 1;
}"
`;

exports[`scss > compileString case 0 1`] = `
"::view-transition-old(root),
::view-transition-new(root) {
  mix-blend-mode: normal;
  animation: none;
}

::view-transition-old(root) {
  z-index: 1;
}

::view-transition-new(root) {
  z-index: 2147483646;
}

[data-theme=dark]::view-transition-old(root) {
  z-index: 2147483646;
}

[data-theme=dark]::view-transition-new(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-old(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-new(root) {
  clip-path: circle(0px at var(--theme-transition-x) var(--theme-transition-y));
  z-index: 2147483646;
}

[data-theme-transition=from-dark]::view-transition-old(root) {
  clip-path: circle(var(--theme-transition-radius) at var(--theme-transition-x) var(--theme-transition-y));
  z-index: 2147483646;
}

[data-theme-transition=from-dark]::view-transition-new(root) {
  z-index: 1;
}"
`;

exports[`scss > compileString case 1 1`] = `
"::view-transition-old(root),
::view-transition-new(root) {
  mix-blend-mode: normal;
  animation: none;
}

::view-transition-old(root) {
  z-index: 2;
}

::view-transition-new(root) {
  z-index: 3;
}

[data-theme=dark]::view-transition-old(root) {
  z-index: 3;
}

[data-theme=dark]::view-transition-new(root) {
  z-index: 2;
}

[data-theme-transition=to-dark]::view-transition-old(root) {
  z-index: 2;
}

[data-theme-transition=to-dark]::view-transition-new(root) {
  clip-path: circle(0px at var(--theme-transition-x) var(--theme-transition-y));
  z-index: 3;
}

[data-theme-transition=from-dark]::view-transition-old(root) {
  clip-path: circle(var(--theme-transition-radius) at var(--theme-transition-x) var(--theme-transition-y));
  z-index: 3;
}

[data-theme-transition=from-dark]::view-transition-new(root) {
  z-index: 2;
}"
`;

exports[`scss > index 1`] = `
"::view-transition-old(root),
::view-transition-new(root) {
  mix-blend-mode: normal;
  animation: none;
}

::view-transition-old(root) {
  z-index: 1;
}

::view-transition-new(root) {
  z-index: 2147483646;
}

.dark::view-transition-old(root) {
  z-index: 2147483646;
}

.dark::view-transition-new(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-old(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-new(root) {
  clip-path: circle(0px at var(--theme-transition-x) var(--theme-transition-y));
  z-index: 2147483646;
}

[data-theme-transition=from-dark]::view-transition-old(root) {
  clip-path: circle(var(--theme-transition-radius) at var(--theme-transition-x) var(--theme-transition-y));
  z-index: 2147483646;
}

[data-theme-transition=from-dark]::view-transition-new(root) {
  z-index: 1;
}"
`;
